# portfolio_backend

./: .env.example  .gitignore  Cargo.toml  README.md
.sqlx/: query-0052ae35dac97da09f7d23e87a45f9b59198e84318970ff0d4a086e291e88c25.json  query-0d047fd3c45d0c5dad9a184dc14927e94da31c7dab78832d7d2c75b7f01ea713.json  query-0ecc7aa98a6ab14536f3422c1350c1b84a8ffdae62a0785306cc2381fe36fc7c.json  query-2a24ebc459377b46dc3f0cef2420ec680cdf0035094b49dc3ff70ab6059436c9.json  query-3c8a36d4cc4676d5cc360ae09b4559fd48bd277447ddc84cb0dc7a21903dbdc4.json  query-46abfbdc96d0950218dcbc21f9ee1ee8b91a01014fb9f68240f379665037181c.json  query-483b058673d310ba3cc0b4d4f7a9106132c4d1722a92565305851a22371490ad.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-99efcd25e717c213efbc3d91e93ca9e146ace1e839831c3b7db1d74ebf5673be.json  query-9acf76f9f6a91c10d6e19cb25447a395aa9d3ed33e8ee0deb79cec9818822feb.json  query-a6f6048b8786c6c948d5b6b084c8b93dfd16f6d5129337630d2d0f2db9e7b78a.json  query-c2f4306182e1562ef67d97073691072cba3f7b0219e493e7d12549b673d79e35.json  query-eb08008cda10f2947726fdb2cd9a100d66fbb542f16ab2323d3647d39a8fee7a.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-feceadbb06c21bda1122ee253feb499cc649da9ee20a715852949870339beb69.json
migrations/: 20250620233332_create_users_table.down.sql  20250620233332_create_users_table.up.sql  20250630205208_add_admin_verified_columns.down.sql  20250630205208_add_admin_verified_columns.up.sql  20250705152027_add_create_user_table.down.sql  20250705152027_add_create_user_table.up.sql  20250723130446_add_create_users_table.down.sql  20250723130446_add_create_users_table.up.sql  20250804213101_create_about_me_table.down.sql  20250804213101_create_about_me_table.up.sql  20250816232636_create_revision_trigger.down.sql  20250816232636_create_revision_trigger.up.sql  20250817151549_update-about-me-unique-constraint.down.sql  20250817151549_update-about-me-unique-constraint.up.sql  20250817152437_update-about-me-revision-trigger.down.sql  20250817152437_update-about-me-revision-trigger.up.sql  20250817221339_update-about-me-revision-triger.down.sql  20250817221339_update-about-me-revision-triger.up.sql  20250817224429_create_blog_posts.down.sql  20250817224429_create_blog_posts.up.sql  20250819213349_fix_slug_uniqueness.down.sql  20250819213349_fix_slug_uniqueness.up.sql  20251003182427_add_auto_generate_slug.down.sql  20251003182427_add_auto_generate_slug.up.sql  20251014210502_add_create_me_table.down.sql  20251014210502_add_create_me_table.up.sql  20251014212912_add_deleted_at_to_contact_me_message.down.sql  20251014212912_add_deleted_at_to_contact_me_message.up.sql
src/: api_errors.rs  background_task.rs  constants.rs  domain.rs  errors.rs  (+7 more)
(+57 files in other folders)
