[package]
name = "portfolio_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
derive_more = "2.0.1"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
humantime = "2.2.0"
jsonwebtoken = "9.3.1"
mockall = "0.13.1"
num_cpus = "1.17.0"
once_cell = "1.21.3"
rand = "0.8.5"
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
