[package]
name = "portfolio_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-limitation = "0.5.1"
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-web = "4.11.0"
ammonia = "4.1.1"
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
bb8 = "0.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dashmap = "6.1.0"
deadpool-redis = "0.22.0"
derive_more = "2.0.1"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
humantime = "2.2.0"
infer = "0.19.0"
jsonwebtoken = "9.3.1"
mockall = "0.13.1"
num_cpus = "1.17.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pulldown-cmark = { version = "0.13.0", features = ["html"] }
rand = "0.8.5"
rand_core = { version = "0.9.3", features = ["os_rng"] }
redis = { version = "0.32.3", features = ["aio","tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid"] }
sysinfo = "0.35.2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.6", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
zxcvbn = "3.1.0"
